--- a/doc/latex/cover-epub.tex
+++ b/doc/latex/cover-epub.tex
@@ -21,7 +21,7 @@
 
 
 \begin{flushleft}
-Copyright \copyright{} 2011 Free Software Foundation, Inc.
+Copyright \copyright{} 2001-2012 Free Software Foundation, Inc.
 \end{flushleft}
 
 \begin{flushleft}
