--- a/doc/latex/cover.tex
+++ b/doc/latex/cover.tex
@@ -3,7 +3,7 @@
 
 
 \begin{quotation}
-Copyright \copyright{} 2011 Free Software Foundation, Inc.
+Copyright \copyright{} 2001-2012 Free Software Foundation, Inc.
 \end{quotation}
 
 \begin{flushleft}
