--- a/doc/fdl-1.3.texi
+++ b/doc/fdl-1.3.texi
@@ -468,7 +468,7 @@ To use this License in a document you have written, include a copy of
 the License in the document and put the following copyright and
 license notices just after the title page:
 
-@smallexample
+@example
 @group
   Copyright (C)  @var{year}  @var{your name}.
   Permission is granted to copy, distribute and/or modify this document
@@ -478,18 +478,18 @@ license notices just after the title page:
   Texts.  A copy of the license is included in the section entitled ``GNU
   Free Documentation License''.
 @end group
-@end smallexample
+@end example
 
 If you have Invariant Sections, Front-Cover Texts and Back-Cover Texts,
 replace the ``with@dots{}Texts.''@: line with this:
 
-@smallexample
+@example
 @group
     with the Invariant Sections being @var{list their titles}, with
     the Front-Cover Texts being @var{list}, and with the Back-Cover Texts
     being @var{list}.
 @end group
-@end smallexample
+@end example
 
 If you have Invariant Sections without Cover Texts, or some other
 combination of the three, merge those two alternatives to suit the
